# veil

./: .gitignore  README.md  package.json
app/: package.json
app/src/: App.tsx  constants.ts  index.tsx
app/src/components/: BridgeForm.tsx  DepositForm.tsx  NetworkSelector.tsx  PoolSelector.tsx  RelayerSelector.tsx  TransactionStatus.tsx  WithdrawForm.tsx
app/src/hooks/: useBridge.ts  useDeposit.ts  usePool.ts  useRelayer.ts  useWithdraw.ts  useZkProof.ts
app/src/pages/: BridgePage.tsx  DepositPage.tsx  HomePage.tsx  WithdrawPage.tsx
app/src/services/: bridgeService.ts  circuitManager.ts  depositService.ts  poolService.ts  relayerService.ts  withdrawService.ts
app/src/utils/: lightProtocolClient.ts  lightRpc.ts  notifications.ts  transactionParser.ts  walletAdapter.ts  zkUtils.ts
circuits/: package.json
circuits/scripts/: compile.js  export.js  setup.js
circuits/src/: bridge.circom  helpers.circom  merkle.circom  withdraw.circom
circuits/src/helpers/: bridge_helpers.circom
contracts/: Anchor.toml
contracts/ethereum/: hardhat.config.ts  package.json
contracts/programs/solana-veil/: Cargo.toml
contracts/programs/solana-veil/src/: errors.rs  events.rs  lib.rs  verifier.rs
contracts/programs/solana-veil/src/instructions/: bridge.rs  deposit.rs  mod.rs  pool.rs  relayer.rs  tree.rs  withdraw.rs
contracts/programs/solana-veil/src/state/: bridge.rs  mod.rs  nullifier.rs  pool.rs  relayer.rs
docs/: api-reference.md  architecture.md  getting-started.md  smart-contracts.md  zk-compression.md
sdk/: package.json
sdk/src/: constants.ts  index.ts
(+61 files in other folders)
